examples/mood/tests/evaluate/enum_construction_incorreect_value_type.mood
enum Maybe {
  Some(i32),
  None
}

pub fn test(): i32 {
  let x: Maybe = Maybe::Some(10_f64);
  10_i32
}